--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "main": "public/electron.js",
     "homepage": "./",
     "dependencies": {
+        "@craco/craco": "^6.3.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -26,14 +27,14 @@
         "web-vitals": "^1.0.1"
     },
     "scripts": {
-        "react-start": "react-scripts start",
-        "react-build": "react-scripts build",
-        "react-test": "react-scripts test --env=jsdom",
+        "craco-start": "craco start",
+        "craco-build": "craco build",
+        "craco-test": "craco test",
         "react-eject": "react-scripts eject",
         "electron-build": "electron-builder",
         "release": "yarn react-build && electron-builder --publish=always",
         "build": "yarn react-build && yarn electron-build",
-        "start": "concurrently \"cross-env BROWSER=none yarn react-start\" \"wait-on http://localhost:3000 && electron .\""
+        "start": "concurrently \"cross-env BROWSER=none yarn craco-start\" \"wait-on http://localhost:3000 && electron .\""
     },
     "eslintConfig": {
         "extends": [
@@ -54,9 +55,12 @@
         ]
     },
     "devDependencies": {
+        "autoprefixer": "9",
         "concurrently": "^6.3.0",
         "electron": "^15.1.1",
         "electron-builder": "^22.11.7",
+        "postcss": "7",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat",
         "wait-on": "^6.0.0"
     }
 }
