--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "homepage": "./",
     "dependencies": {
         "@craco/craco": "^6.3.0",
+        "@radix-ui/colors": "^0.1.7",
+        "@radix-ui/react-collapsible": "^0.1.1",
+        "@radix-ui/react-icons": "^1.0.3",
+        "@stitches/react": "^1.2.5",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
